# quasarcup

./: .gitignore  Cargo.toml  README.md  justfile  roadmap.md
backend/: Cargo.toml
backend/migrations/: 20250730_create_tables.sql
backend/src/: fixture.rs  main.rs  tournament.rs
frontend/: Cargo.toml  create.html  index.html  scripts.js  styles.css  tournament.html
frontend/pages/: create.html
frontend/src/: main.rs  pages.rs
frontend/src/pages/: layout.rs
frontend/templates/: template.html
frontend_old/: index.html
frontend_old/src/pages/: layout.rs
