[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"]}
hyper = { version = "1.6.0", features = ["full"]}
log = "0.4.28"
rand = "0.9.1"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"]}
tokio = { version = "1.45.1", features = ["full"]}
tower-http = { version = "0.6.6", features = ["cors", "fs"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"]}
